--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#201e28"
-    tools:context=".MainActivity">
+    android:background="#e2a600"
+    tools:context=".AuthActivity">
 
 
     <TextView
@@ -19,10 +19,10 @@
         android:fontFamily="@font/inter"
         android:textSize="25sp"
         android:textStyle="bold"
-        android:text="@string/registration" />
+        android:text="Войдите в аккаунт" />
 
     <EditText
-        android:id="@+id/user_login"
+        android:id="@+id/user_login_auth"
         android:layout_width="220dp"
         android:layout_height="50dp"
         android:ems="10"
@@ -33,20 +33,9 @@
         android:textColor="#fdfdfd"
         android:hint="@string/write_login" />
 
-    <EditText
-        android:id="@+id/user_email"
-        android:layout_width="220dp"
-        android:layout_height="50dp"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        android:textColorHint="#6a6a6a"
-        android:layout_marginTop="20dp"
-        android:layout_gravity="center"
-        android:textColor="#fdfdfd"
-        android:hint="@string/write_email" />
 
     <EditText
-        android:id="@+id/user_pass"
+        android:id="@+id/user_pass_auth"
         android:layout_width="220dp"
         android:layout_height="50dp"
         android:ems="10"
@@ -58,15 +47,15 @@
         android:hint="@string/write_pass" />
 
     <Button
-        android:id="@+id/button_reg"
+        android:id="@+id/button_auth"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:textStyle="bold"
         android:textSize="16sp"
-        android:textColor="#5e4602"
+        android:textColor="#fff"
         android:layout_gravity="center"
-        android:backgroundTint="#e2a600"
+        android:backgroundTint="#201e28"
         android:layout_marginTop="30dp"
-        android:text="Зарегистрироваться" />
+        android:text="Войти" />
 
 </LinearLayout>
