--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -4,58 +4,68 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     android:background="#e2a600"
+    android:orientation="vertical"
     tools:context=".AuthActivity">
 
 
     <TextView
-        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="#fdfdfd"
         android:layout_gravity="center"
         android:layout_marginTop="170dp"
         android:fontFamily="@font/inter"
+        android:text="Войдите в аккаунт"
+        android:textColor="#fdfdfd"
         android:textSize="25sp"
-        android:textStyle="bold"
-        android:text="Войдите в аккаунт" />
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/user_login_auth"
         android:layout_width="220dp"
         android:layout_height="50dp"
-        android:ems="10"
-        android:inputType="text"
-        android:textColorHint="#6a6a6a"
-        android:layout_marginTop="20dp"
         android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:hint="@string/write_login"
+        android:inputType="text"
         android:textColor="#fdfdfd"
-        android:hint="@string/write_login" />
+        android:textColorHint="#6a6a6a" />
 
 
     <EditText
         android:id="@+id/user_pass_auth"
         android:layout_width="220dp"
         android:layout_height="50dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:textColorHint="#6a6a6a"
-        android:layout_marginTop="20dp"
         android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:ems="10"
+        android:hint="@string/write_pass"
+        android:inputType="textPassword"
         android:textColor="#fdfdfd"
-        android:hint="@string/write_pass" />
+        android:textColorHint="#6a6a6a" />
 
     <Button
         android:id="@+id/button_auth"
         android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:textStyle="bold"
-        android:textSize="16sp"
-        android:textColor="#fff"
         android:layout_gravity="center"
-        android:backgroundTint="#201e28"
         android:layout_marginTop="30dp"
-        android:text="Войти" />
+        android:backgroundTint="#201e28"
+        android:text="Войти"
+        android:textColor="#fff"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/link_to_reg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="130dp"
+        android:fontFamily="@font/inter"
+        android:text="Зарегистрироваться"
+        android:textColor="#fdfdfd"
+        android:textSize="17sp" />
 
 </LinearLayout>
