--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,4 +69,15 @@
         android:layout_marginTop="30dp"
         android:text="Зарегистрироваться" />
 
+    <TextView
+        android:id="@+id/link_to_auth"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="130dp"
+        android:fontFamily="@font/inter"
+        android:textColor="#fdfdfd"
+        android:textSize="17sp"
+        android:text="Авторизоваться"/>
+
 </LinearLayout>
