--- a/app/src/main/res/layout/activity_item.xml
+++ b/app/src/main/res/layout/activity_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -44,12 +45,13 @@
         android:gravity="end"
         android:text="TextView" />
 
-    <Button
-        android:id="@+id/item_buy_button"
-        android:layout_width="200dp"
+    <com.yandex.pay.token.YPayButton
+        android:id="@+id/y_pay_button"
+        android:layout_width="300dp"
+        android:layout_height="54dp"
+        android:layout_marginTop="4dp"
+        app:ypay_color_scheme="light"
         android:layout_gravity="center"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:backgroundTint="#9F0B00"
-        android:text="Купить" />
+        app:ypay_corner_radius="4dp" />
+
 </LinearLayout>
